--- a/index.html
+++ b/index.html
@@ -11,6 +11,67 @@
 
 <body>
 
+  <header>
+    <h1>Student Name</h1>
+    <nav>
+      <ul>
+        <li>Home</li>
+        <li>Portfolio</li>
+        <li>Contact</li>
+      </ul>
+    </nav>
+    <div class="introduction">
+      <img src="images/responsive-layout-profile.png" alt="Profile Photo of Rachel Johnson" />
+      <p>Hi! I'm a front-end developer who loves responsive design and css. I recently finished learning front-end web development at Treehouse and am excited to put all my skills to use!</p>
+    </div>
+  </header>
+
+  <main>
+    <h2>Portfolio</h2>
+    <article>
+      <img src="images/portfolio-1.png" alt="Marketing Page Image" />
+      <h3>Marketing Page</h3>
+      <p>This project shows the front page of a marketing website meant for a specific business I'm interested in.</p>
+    </article>
+    <article>
+      <img src="images/portfolio-2.png" alt="Search Page Image" />
+      <h3>Search Page</h3>
+      <p>This project searches through a specific database to find information that the user is trying to look up.</p>
+    </article>
+    <article>
+      <img src="images/portfolio-3.png" alt="Travel App Image" />
+      <h3>Travel App</h3>
+      <p>This project compares travel times based on different transportation methods and tells you the best one.</p>
+    </article>
+    <article>
+      <img src="images/portfolio-4.png" alt="Map of Favorite Spots Image" />
+      <h3>Map of Favorite Spots</h3>
+      <p>This project uses mapping apis to plot points for my favorite spots in the city for a do-it-yourself walking tour.</p>
+    </article>
+    <article>
+      <img src="images/portfolio-5.png" alt="Photo Gallery Image" />
+      <h3>Photo Gallery</h3>
+      <p>This project shows pictures from a recent trip to the viewer and allows them to easily navigate through photos.</p>
+    </article>
+    <article>
+      <img src="images/portfolio-6.png" alt="Calculator Image" />
+      <h3>Calculator</h3>
+      <p>Someone can enter in the numbers they want, and press the big blue button and get the result.</p>
+    </article>
+  </main>
+
+  <footer>
+    <h2>Contact</h2>
+    <p>If you're interested in chatting or want more information about what I've been working on, I'd love to hear from you!</p>
+    <p>Phone <strong>+1&lpar;111&rpar; 555-1234</strong></p>
+    <p>Email <strong>email@yoursite.com</strong></p>
+
+    <hr>
+
+    <span class="footer-name">Rachel Johnson</span>
+    <span class="footer-backtotop">Back to Top</span>
+  </footer>
+
 </body>
 
 </html>
