--- a/index.html
+++ b/index.html
@@ -5,19 +5,19 @@
   <title>Rachel Johnson Portfolio - FEWD Project 2</title>
   <link rel="icon" type="image/png" href="favicon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700" rel="stylesheet">
   <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
 
   <header>
-    <h1>Student Name</h1>
+    <h1>Rachel Johnson</h1>
     <nav>
       <ul>
-        <li>Home</li>
-        <li>Portfolio</li>
-        <li>Contact</li>
+        <li><a href="#">Home</a></li>
+        <li><a href="#portfolio">Portfolio</a></li>
+        <li><a href="#contact">Contact</a></li>
       </ul>
     </nav>
     <div class="introduction">
@@ -27,7 +27,7 @@
   </header>
 
   <main>
-    <h2>Portfolio</h2>
+    <h2 id="portfolio">Portfolio</h2>
     <article>
       <img src="images/portfolio-1.png" alt="Marketing Page Image" />
       <h3>Marketing Page</h3>
@@ -61,15 +61,16 @@
   </main>
 
   <footer>
-    <h2>Contact</h2>
+    <h2 id="contact">Contact</h2>
     <p>If you're interested in chatting or want more information about what I've been working on, I'd love to hear from you!</p>
     <p>Phone <strong>+1&lpar;111&rpar; 555-1234</strong></p>
     <p>Email <strong>email@yoursite.com</strong></p>
 
     <hr>
-
-    <span class="footer-name">Rachel Johnson</span>
-    <span class="footer-backtotop">Back to Top</span>
+    <div class="bottom-nav clearfix">
+      <span class="footer-name">Rachel Johnson</span>
+      <span class="footer-backtotop"><a href="#">Back to Top</a></span>
+    </div>
   </footer>
 
 </body>
