--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="icon" type="image/png" href="favicon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Homemade+Apple" rel="stylesheet">
   <link rel="stylesheet" href="css/styles.css">
 </head>
 
@@ -19,6 +20,7 @@
         <ul>
           <li><a href="#">Home</a></li>
           <li><a href="#portfolio">Portfolio</a></li>
+          <li><a href="#skills">Skill</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
       </nav>
@@ -29,45 +31,61 @@
     </div>
   </header>
 
-  <main class="clearfix portfolioitems">
-    <h2 id="portfolio">Portfolio</h2>
-    <article>
-      <img src="images/portfolio-1.png" alt="Marketing Page Image" />
-      <h3>Marketing Page</h3>
-      <p>This project shows the front page of a marketing website meant for a specific business I'm interested in.</p>
-    </article>
-    <article>
-      <img src="images/portfolio-2.png" alt="Search Page Image" />
-      <h3>Search Page</h3>
-      <p>This project searches through a specific database to find information that the user is trying to look up.</p>
-    </article>
-    <article>
-      <img src="images/portfolio-3.png" alt="Travel App Image" />
-      <h3>Travel App</h3>
-      <p>This project compares travel times based on different transportation methods and tells you the best one.</p>
-    </article>
-    <article>
-      <img src="images/portfolio-4.png" alt="Map of Favorite Spots Image" />
-      <h3>Map of Favorite Spots</h3>
-      <p>This project uses mapping apis to plot points for my favorite spots in the city for a do-it-yourself walking tour.</p>
-    </article>
-    <article>
-      <img src="images/portfolio-5.png" alt="Photo Gallery Image" />
-      <h3>Photo Gallery</h3>
-      <p>This project shows pictures from a recent trip to the viewer and allows them to easily navigate through photos.</p>
-    </article>
-    <article>
-      <img src="images/portfolio-6.png" alt="Calculator Image" />
-      <h3>Calculator</h3>
-      <p>Someone can enter in the numbers they want, and press the big blue button and get the result.</p>
-    </article>
+  <main class="portfolioitems">
+    <div class="portfolio clearfix">
+      <h2 id="portfolio">Portfolio</h2>
+      <article>
+        <img src="images/portfolio-1.png" alt="Marketing Page Image" />
+        <h3>Marketing Page</h3>
+        <p>This project shows the front page of a marketing website meant for a specific business I'm interested in.</p>
+      </article>
+      <article>
+        <img src="images/portfolio-2.png" alt="Search Page Image" />
+        <h3>Search Page</h3>
+        <p>This project searches through a specific database to find information that the user is trying to look up.</p>
+      </article>
+      <article>
+        <img src="images/portfolio-3.png" alt="Travel App Image" />
+        <h3>Travel App</h3>
+        <p>This project compares travel times based on different transportation methods and tells you the best one.</p>
+      </article>
+      <article>
+        <img src="images/portfolio-4.png" alt="Map of Favorite Spots Image" />
+        <h3>Map of Favorite Spots</h3>
+        <p>This project uses mapping apis to plot points for my favorite spots in the city for a do-it-yourself walking tour.</p>
+      </article>
+      <article>
+        <img src="images/portfolio-5.png" alt="Photo Gallery Image" />
+        <h3>Photo Gallery</h3>
+        <p>This project shows pictures from a recent trip to the viewer and allows them to easily navigate through photos.</p>
+      </article>
+      <article>
+        <img src="images/portfolio-6.png" alt="Calculator Image" />
+        <h3>Calculator</h3>
+        <p>Someone can enter in the numbers they want, and press the big blue button and get the result.</p>
+      </article>
+    </div>
+    <hr>
+    <h2 id="skills">Skills</h2>
+    <ul class="skills">
+      <li>HTML</li>
+      <li>CSS</li>
+      <li>SASS</li>
+      <li>JavaScript</li>
+      <li>JQuery</li>
+      <li>PHP</li>
+      <li>AJAX</li>
+      <li>MySQL</li>
+      <li>Wordpress</li>
+      <li>WooCommerce</li>
+    </ul>
   </main>
 
   <footer>
     <h2 id="contact">Contact</h2>
     <p class="footertext">If you're interested in chatting or want more information about what I've been working on, I'd love to hear from you!</p>
-    <p>Phone <strong>+1&lpar;111&rpar; 555-1234</strong></p>
-    <p>Email <strong>email@yoursite.com</strong></p>
+    <p>Phone <strong><a href="#">+1&lpar;111&rpar; 555-1234</a></strong></p>
+    <p>Email <strong><a href="#">email@yoursite.com</a></strong></p>
 
     <hr>
     <div class="bottom-nav clearfix">
@@ -76,6 +94,7 @@
       <ul class="footer-nav">
         <li><a href="#">Home</a></li>
         <li><a href="#portfolio">Portfolio</a></li>
+        <li><a href="#skills">Skills</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
     </div>
