--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <ul>
           <li><a href="#">Home</a></li>
           <li><a href="#portfolio">Portfolio</a></li>
-          <li><a href="#skills">Skill</a></li>
+          <li><a href="#skills">Skills</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
       </nav>
