--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     <h2 id="contact">Contact</h2>
     <p class="footertext">If you're interested in chatting or want more information about what I've been working on, I'd love to hear from you!</p>
     <p>Phone <strong><a href="#">+1&lpar;111&rpar; 555-1234</a></strong></p>
-    <p>Email <strong><a href="#">email@yoursite.com</a></strong></p>
+    <p>Email <strong><a href="mailto:email@yoursite.com">email@yoursite.com</a></strong></p>
 
     <hr>
     <div class="bottom-nav clearfix">
