--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
 
 <body>
 
-  <header>
+  <header id="#top">
     <div class="clearfix">
       <h1>Rachel Johnson</h1>
       <nav>
         <ul>
-          <li><a href="#">Home</a></li>
+          <li><a href="#top">Home</a></li>
           <li><a href="#portfolio">Portfolio</a></li>
           <li><a href="#skills">Skills</a></li>
           <li><a href="#contact">Contact</a></li>
@@ -92,7 +92,7 @@
       <span class="footer-name">Rachel Johnson</span>
       <span class="footer-backtotop"><a href="#">Back to Top</a></span>
       <ul class="footer-nav">
-        <li><a href="#">Home</a></li>
+        <li><a href="#top">Home</a></li>
         <li><a href="#portfolio">Portfolio</a></li>
         <li><a href="#skills">Skills</a></li>
         <li><a href="#contact">Contact</a></li>
